# ChangeLog for games-emulation/xmess
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmess/Attic/ChangeLog,v 1.23 2005/02/26 06:46:39 mr_bones_ Exp $

*xmess-0.92 (26 Feb 2005)

  26 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +xmess-0.92.ebuild:
  version bump

  12 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.90.ebuild:
  sync with xmame ebuilds

*xmess-0.90 (24 Jan 2005)

  24 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> +xmess-0.90.ebuild:
  version bump

*xmess-0.88 (04 Dec 2004)

  04 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +xmess-0.88.ebuild:
  version bump

  18 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.83.1.ebuild:
  sync with xmame ebuild

*xmess-0.83.1 (15 Jun 2004)

  15 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.83.1.ebuild,
  files/0.83.1-glx-fix.patch:
  version bump

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> xmess-0.77.1.ebuild,
  xmess-0.78.1.ebuild, xmess-0.80.1.ebuild, xmess-0.81.1.ebuild,
  xmess-0.82.1.ebuild:
  Fix use invocation

  06 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.82.1.ebuild:
  use flag fixing

*xmess-0.82.1 (06 Jun 2004)

  06 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.82.1.ebuild,
  files/0.82.1-glx-fix.patch:
  version bump (bug #51883)

  21 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.81.1.ebuild,
  files/0.81.1-glx-fix.patch:
  sync ebuild with xmame

*xmess-0.81.1 (19 Apr 2004)

  19 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.81.1.ebuild:
  version bump

*xmess-0.80.1 (19 Mar 2004)

  19 Mar 2004; David Holm <dholm@gentoo.org> xmess-0.80.1.ebuild,
  files/0.80.1-glx-fix.patch, files/0.80.1-icc.patch, files/0.80.1-make.patch:
  Version bumped, added make-patch to support multiple build jobs.

  16 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.77.1.ebuild,
  xmess-0.78.1.ebuild: