@@ -1,5 +1,6 @@
 MD5 bd0b7999abdcec2aaea404a57c6faac9 ChangeLog 3570
 MD5 30c9b8b73945531fe1c8d554e29857db xmess-0.92.ebuild 5656
+MD5 45c8d0f25a0a94014d363211224d668e xmess-0.94.ebuild 5736
 MD5 0234d9024c471faf92bb1219242614ef metadata.xml 1566
 MD5 373a92f0967dbdd80ed90a4bcb05819d xmess-0.83.1.ebuild 6577
 MD5 a8f4b3c2611ed8cfcfa54c51d65581f9 xmess-0.90.ebuild 5656
@@ -9,6 +10,7 @@ MD5 13dc5b32bbff98dec74c41dd0c9b33a1 files/0.78.1-glx-fix.patch 597
 MD5 22d18a43e0c863d4ae3dd5ecd1c97dcd files/digest-xmess-0.92 65
 MD5 9bbbd2de60f0c41f643674a694cd2c90 files/0.77.1-alsa-1.0.0.patch 438
 MD5 93b9c4a740015eb7262b223c7b8b7bbf files/0.78.1-icc.patch 584
+MD5 f35e45e67ae14ead8e17b2dfcb9b161e files/digest-xmess-0.94 65
 MD5 0f77c568ca5f6a46b543e899c910d38a files/0.78.1-osd_die.patch 521
 MD5 13dc5b32bbff98dec74c41dd0c9b33a1 files/0.80.1-glx-fix.patch 597
 MD5 93b9c4a740015eb7262b223c7b8b7bbf files/0.80.1-icc.patch 584
