@@ -1,0 +1,1 @@
+MD5 755133f9c6712621fa0e1bedef88b0a9 xmame-0.94.tar.bz2 15388074
