@@ -1,6 +1,11 @@
 # ChangeLog for games-emulation/xmess
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmess/Attic/ChangeLog,v 1.23 2005/02/26 06:46:39 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmess/Attic/ChangeLog,v 1.24 2005/03/17 03:12:09 mr_bones_ Exp $
+
+*xmess-0.94 (16 Mar 2005)
+
+  16 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> +xmess-0.94.ebuild:
+  version bump
 
 *xmess-0.92 (26 Feb 2005)
 
